完成协议中的CRC校验，异或校验，加密

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//src/com/ximei/tiny/service=UTF-8
 encoding//src/com/ximei/tiny/service/CaijiService.java=UTF-8
 encoding//src/com/ximei/tiny/tools=UTF-8
 encoding//src/com/ximei/tiny/wlwmeter=UTF-8
+encoding/<project>=UTF-8
