--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -32,6 +32,8 @@
         </activity>
         <activity android:name="com.ximei.tiny.chaobiao.SingleCBActivity" >
         </activity>
+        <activity android:name="com.ximei.tiny.chaobiao.ReadHistoryActivity" >
+        </activity>
         <activity android:name="com.ximei.tiny.chaobiao.GroupCBFSActivity" >
         </activity>
         <activity android:name="com.ximei.tiny.chaobiao.TargetBCActivity" >
