金卡：增加蓝牙手动选择，打开应用第一次自动连接 	  增加故障清除，以及bug修复

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -128,7 +128,8 @@
         </activity>
         <activity android:name="com.ximei.tiny.wlwmeter.GasPaymentActivity" >
         </activity>
-
+		<activity android:name="com.ximei.tiny.chaobiao.GuZhangClear" >
+        </activity>
         <service android:name="com.ximei.tiny.service.DataBaseService" >
         </service>
         <service android:name="com.ximei.tiny.service.CaijiService" >
